apps/argo-cd/components/istio-ingress/networking.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
spec:
  hosts:
    - ARGOCD_DOMAIN
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  servers:
    - port:
        number: 0
        name: https-ingress
        protocol: HTTPS
      hosts:
        - ARGOCD_DOMAIN
      tls:
        mode: SIMPLE
        credentialName: argocd-tls
